# rcbot

./: .gitignore  CMakeLists.txt  README.md  build_hlcoop.bat  build_hlcoop.sh  build_sven.bat  build_sven.sh  msvc_hlcoop.bat  msvc_sven.bat  replace_dll.bat
dlls/: Config.mak  HPB_bot.dsp  HPB_bot.ncb  HPB_bot.opt  HPB_bot.plg  HPB_bot.sln  HPB_bot.vcproj  Makefile  Rules.depend  api_info.cpp  basemonster.h  bits.cpp  bot_client.h  bot_commands.h  bot_menu.h  bot_nn.cpp  bot_rep.cpp  bot_tick.h  bot_weapons.h  cbase.h  cdll_dll.h  commands_meta.cpp  commands_meta.h  dir.cpp  dll.cpp  engine_api.cpp  engine_api.h  extdll.h  ga.h  game_support.cpp  game_support.h  generic_class.h  globals.cpp  h_export.cpp  h_export_meta.cpp  h_export_meta.h  linkfunc.cpp  log_meta.h  makefile_borland_mm  makefile_borland_sa  (+22 more)
dlls/ents/: adrenalinegamer  cstrike  dayofdefeat  digitalpaintball  gangwars  gunman  iosoccer  monkeystrike  morbidinclination  overground  oz  tourofduty  weaponwars
dlls/msgs/: debug  log
dlls/msvc/: metamod.dsp  metamod.dsw
engine/: eiface.h
metamodold/: api_info.h  conf_meta.h  dllapi.cpp  games.h  h_export.cpp  linkgame.cpp  log_meta.cpp  mlist.cpp  mlist.h  mplugin.h  support_meta.h  vers_meta.h
metamodold/ents/: arg  common  esforces  frontline  globalwarfare  goldeneye  holywars  naturalselection  paintball  publicenemy  science-industry  underworld  valve  wastes  wormshl
metamodold/msgs/: error
src/: actionutility.h  bak_bot_weapons.h  bits.cpp  bits.h  bot.cpp  bot.h  bot_builder.h  bot_chat.cpp  bot_chat.h  bot_client.cpp  bot_client.h  bot_combat.cpp  bot_commands.cpp  bot_const.h  bot_ga.cpp  bot_ga.h  bot_menu.cpp  bot_menu.h  bot_navigate.cpp  bot_nn.cpp  bot_rep.cpp  bot_start.cpp  bot_texture.h  bot_visibles.cpp  bot_visibles.h  bot_weapons.cpp  bot_weapons.h  client.cpp  dir.cpp  dir.h  dll.cpp  engine.cpp  ga.cpp  gannconst.h  generic_class.h  globals.cpp  h_export.cpp  hlcoop.h  main.cpp  megahal.cpp  (+11 more)
src/ents/: action  azuresheep  battlegrounds  botman  bumpercars  buzzybots  desertcrisis  dmclassic  dragonmodz  existence  firearms  gangsta  hlrally  intlsoccer  jailbreak  judgedm  kanonball  opforce  outlawsmod  phineas  pointofnoreturn  ricochet  rivalspecies  rocketcrowbar  scientist-hunt  snowwar  specialists  stargatetc  sturmbot  svencoop  swarm  tfc  timeless  trainhunters  vampireslayer  wanted  wasteland  wizardwars
tools/: CMakeLists.txt
tools/src/: wptconv.cpp
